tests/snapshots/docstring_wrap/args_wrap.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/docstring_wrap/args_wrap.input.py
---
docstring-wrap@347..347
