tests/snapshots/docstring_wrap/class_docstring.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/docstring_wrap/class_docstring.input.py
---
"""
A class-level docstring with an Attributes section wraps its entries with
the same hanging-column shape as a function-level Args entry, since the
walker visits every body holding a string literal as its first expression
statement.
"""


class Posting:
    """
    Summary line.

    Attributes:
        title: A descriptive title that exceeds the eighty eight character
               section budget when written out as a single line.
        salary: Annual salary in USD.
    """

    salary = 0.0
    title = "Untitled"
