tests/snapshots/docstring_wrap/code_block_indented.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/docstring_wrap/code_block_indented.input.py
---

