tests/snapshots/docstring_wrap/entry_idempotent.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/docstring_wrap/entry_idempotent.input.py
---
docstring-wrap@367..388
docstring-wrap@70..151
