tests/snapshots/docstring_wrap/entry_idempotent.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/docstring_wrap/entry_idempotent.input.py
---
"""
An Args entry already wrapped with the hanging-column shape passes through
unchanged, confirming the rule fires only when re-wrapping would change
the output.
"""


def configure():
    """
    Summary line.

    Args:
        first: A description already wrapped at the docstring budget with
               continuation lines sitting at the hanging-column indent under
               the description.
        second: A short entry that fits on its line.
    """
